--- a/Download scripts/Download_Transform.ipynb
+++ b/Download scripts/Download_Transform.ipynb
@@ -27,14 +27,11 @@
    "source": [
     "# функция для получения количества друзей пользователя\n",
     "def friends_count(id):\n",
-    "    try:\n",
-    "        url = 'https://api.vk.com/method/friends.get' \n",
-    "        params = {'user_id': id, 'v': 5.99, 'access_token': token, 'lang': 'ru'}\n",
-    "        count = requests.get(url, params=params)\n",
-    "        time.sleep(0.2)\n",
-    "        return count.json()['response']['count']\n",
-    "    except KeyError:\n",
-    "        return 0"
+    "    url = 'https://api.vk.com/method/friends.get' \n",
+    "    params = {'user_id': id, 'v': 5.99, 'access_token': token, 'lang': 'ru'}\n",
+    "    count = requests.get(url, params=params)\n",
+    "    time.sleep(0.2)\n",
+    "    return count.json()['response']['count']"
    ]
   },
   {
@@ -273,7 +270,7 @@
    "source": [
     "# получение данных\n",
     "\n",
-    "token = ''\n",
+    "token = '' # ТОКЕН VK.API\n",
     "url = 'https://api.vk.com/method/groups.getMembers'\n",
     "count = 1000\n",
     "offset = 0 \n",
